[package]
name = "aco_surgeries"
version = "0.1.0"
authors = ["Ericson Fogo Soares <ericson.ds999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = {version = "0.8.1", features=["default", "small_rng"]}
structopt = "0.3.21"
crossbeam = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"